--- a/templates/index.html
+++ b/templates/index.html
@@ -26,8 +26,9 @@
 <div class="about-section" style="display: none;">
     <div class="about-content">
         <h2><i class="fas fa-info-circle"></i> 关于网站</h2>
-        <p>欢迎来到壁纸浏览网站！这里收集了各种精美的壁纸图片，您可以通过分类浏览、搜索功能找到喜欢的图片。管理员可以登录后上传新图片、管理分类。</p>
-        <p>使用方法：点击上方分类进入图片浏览页面，可以切换瀑布流和分页式两种视图模式，点击图片查看大图及详情。</p>
+        <p>欢迎来到我的多媒体小站！这里有我收集的各种精美图片和视频。</p>
+        <p>可以切换瀑布流和分页式两种视图模式，点击图片查看大图及详情。</p>
+        <p>&copy; {{ current_year }} Yoy基于AI创建</p>
     </div>
 </div>
 {% endblock %}
